# presto-load-testing

./: Jenkinsfile  locustfile.py
.github/workflows/: load_test.yml  locust-test.yml
app/: pyproject.toml
data/: pyproject.toml
docs/: pyproject.toml
load-test/: pyproject.toml
load-test/load_test/: locustfile.py
load-test/tests/: test_locustfile.py
load_test/: pyproject.toml  run.sh
load_test/src/: constants.py  locustfile.py
load_test/tests/unit/: test_generate_coordinates.py
locust-results-2025-03-24-08-07-22/: locust_report_failures.csv  locust_report_stats.csv  locust_report_stats_history.csv
locust-results-2025-03-26-07-03-39/: locust_report_failures.csv  locust_report_stats.csv  locust_report_stats_history.csv
locust-results-2025-03-26-08-11-05/: locust_report_exceptions.csv  locust_report_stats_history.csv
locust-results-2025-03-26-08-12-24/: locust_report_stats_history.csv
locust-results-2025-03-28-21-46-41/: locust_report_stats_history.csv
pulumi/: pyproject.toml
test/: load_test.sh  locustfile.py  process_locust.ipynb  pyproject.toml  run.sh  rzrisk.json  test_locustfile.py
