[project]
name = "load-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Linsong Wang",email = "lwang@redzone.co"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "locust (>=2.33.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
