[project]
name = "load_test"
version = "0.1.0"
description = ""
authors = [
    {name = "Linsong Wang",email = "lwang@redzone.co"}
]
readme = "README.md"
packages = [{ include = "load_test", from = "src" }]
requires-python = ">=3.10"
dependencies = [
    "locust (>=2.33.2,<3.0.0)"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"