[tool.poetry]
name = "load_test"
version = "0.1.0"
description = ""
authors = ["Linsong Wang <lwang@redzone.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
locust = ">=2.33.2,<3.0.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
