[project]
name = "presto-load-testing"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "locust (>=2.33.2,<3.0.0)",
    "auth (>=0.5.3,<0.6.0)"
]

[tool.poetry]
packages = [{include = "presto_load_testing", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
